refactor(RVCV-36): collection 코드를 stream으로 변경한다.